<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComponentCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_text">Hello World! List Item</string>
    <string name="calculator_string_qnty_option">Take QNTY into Account?</string>
    <string name="calculator_string_instructions">
        Enter Desired Value:
    </string>
    <string name="calculator_string_find_combinations">
        Find Combinations
    </string>
    <string name="calculator_string_resistor">Resistor</string>
       <string name="calculator_string_capacitor">Capacitor</string>
    <string name="calculator_string_prefer_shorter">Prefer Shorter</string>
    <string name="calculator_string_prefer_accuracy">Prefer Accuracy</string>
    <string name="calculator_string_precision">10% Error:</string>
    <string name="calculator_string_kill">Kill</string>
    <string name="inventory_menu_string_trash">Trash</string>
    <string name="inventory_menu_string_add">Add</string>
    <string name="inventory_menu_string_load">Load Inventory From File</string>
    <string name="inventory_menu_string_save">Save Inventory To File</string>
    <string name="inventory_trash_dialog_string_instructions">Long-Press the Component you wish to delete</string>
	<string name="inventory_trash_dialog_string_close">Close Dialog</string>
	<string name="inventory_list_item_dialog_string_delete">Delete</string>
	<string name="inventory_load_dialog_string_use_preloaded">Preloaded</string>
	<string name="inventory_load_dialog_string_use_user">User</string>
	<string name="inventory_list_item_dialog_string_view_in_schematic">View In Schematic</string>
</resources>
