<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/calculator_text_view_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_string_instructions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/calculator_edit_text_find_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/calculator_text_view_qnty_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_string_qnty_option"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/calculator_check_box_qnty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
          	<RadioGroup
          	    android:id="@+id/calculator_radio_group"
          	    android:orientation="horizontal"
   				android:layout_width="fill_parent"
   				android:layout_height="wrap_content"
   				android:layout_weight="1"
          	    >
          	    
          	<RadioButton
                android:id="@+id/calculator_radio_button_resistor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/calculator_string_resistor" />

            <RadioButton
                android:id="@+id/calculator_radio_button_capacitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_string_capacitor" />
			
			</RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:text="@string/calculator_string_prefer_shorter"
                />
            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:text="@string/calculator_string_prefer_accuracy"
                />
        </TableRow>
        
        <SeekBar
            android:id="@+id/calculator_seek_bar_prefer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:progress="50"/>
        
        <TableRow >
        <TextView
            android:id="@+id/calculator_text_view_precision"
            android:layout_width  = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:text="@string/calculator_string_precision"
            />
        <TextView
            android:id="@+id/calculator_text_view_precision_immediate_value"
            android:layout_width  = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:text="1234"
            />
        </TableRow>

        <SeekBar
            android:id="@+id/calculator_seek_bar_precision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/calculator_integer_max_prefer" 
            android:progress="10"/>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            >

            <Button
                
                android:id="@+id/calculator_button_find_combinations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculator_string_find_combinations" />

        </TableRow>

        
   </TableLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/calculator_text_view_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>